hphp/hack/test/typecheck/subtype_array4.php.exp
File "subtype_array4.php", line 19, characters 18-35:
Some type constraint(s) here are violated (Typing[4323])
  File "hackarray.hhi", line 23, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 23, characters 34-41:
  Expected `arraykey`
  File "subtype_array4.php", line 19, characters 25-29:
  But got `mixed`
File "subtype_array4.php", line 24, characters 11-12:
Invalid argument (Typing[4110])
  File "subtype_array4.php", line 19, characters 32-34:
  Expected `int`
  File "subtype_array4.php", line 12, characters 36-39:
  But got `bool`
